infrastructure/storage/longhorn/longhorn-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  type: ClusterIP
  selector:
    app: longhorn-ui
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
